--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="calculator">
-		<form name="calculator">
+		<form name="calculator"  onclick="displayValue()">
 			<table border="0">
 				<tbody>
 					<tr>
